# stm32f446-dronecan-mc33772

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  LICENSE  stm32f446-dronecan-mc33772-attach.launch  stm32f446-dronecan-mc33772.ioc  stm32f446-dronecan-mc33772.launch
Core/Inc/: main.h  rte.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  systimer.h  util.h
Core/Src/: can.c  gpio.c  main.c  rte.c  spi.c  stm32f4xx_it.c  systimer.c  tim.c  usb_otg.c  util.c
Core/Src/afedrv/: MC33771C.h  MC33772C.h  afedrv.c  afedrv.h  afedrv_common.c  afedrv_common.h  afedrv_monitoring.c  afedrv_monitoring.h  afedrv_types.h  bcc.c  bcc.h  bcc_communication.c  bcc_communication.h  bcc_peripheries.c  bcc_peripheries.h  bcc_utils.h  bcc_wait.c  bcc_wait.h
Core/Src/bcf/: AP_BattCagi.c  AP_BattCagi.h  AP_BattEkf.c  AP_BattEkf.h  AP_BattEkfImpl.c  AP_BattEkfImpl.h  AP_BattEkf_Math.h  AP_BattEkf_Model.h  AP_BattRemTimeCalc.c  AP_BattRemTimeCalc.h  bcf.c  bcf.h  bcf_ekf.c  bcf_ekf.h  bcf_types.h
Core/Src/bcf/test/: CsvReader.h  Makefile  README.md  ekf_test.cpp  show.py
Core/Src/bcf/test/mock/AP_Math/: AP_Math.h
Core/Src/bcf/test/record/: output_data.csv
Core/Src/dronecan/: dronecan.c  dronecan.h  dronecan_type.h
